tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/trailing-us.stderr
TOML parse error at line 1, column 19
  |
1 | trailing-us = 123_
  |                   ^
invalid integer
expected digit
